# matplotlib-radar

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yml  docs.yml  release.yaml  testing.yml
.stubs/matplotlib/: __init__.pyi  cm.pyi  colors.pyi  pyplot.pyi
.stubs/matplotlib/projections/: __init__.pyi  polar.pyi
docs/: Makefile  example.ipynb  generate_example_plot.py
docs/source/: conf.py  index.rst  installation.md  introduction.md
docs/source/_static/css/: custom.css
docs/source/notebooks/: example.ipynb
matplotlib_radar/: __init__.py  _radar_chart.py
src/matplotlib_radar/: _version.py
tests/: test_package.py  test_radar_chart.py
