[build-system]
build-backend = "flit_core.buildapi"
requires = [ "flit-core>=3.4,<4" ]

[project]
name = "matplotlib-radar"
description = "Radar chart for matplotlib"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
maintainers = [ { name = "harryhaller001", email = "harryhaller001@gmail.com" } ]
authors = [ { name = "harryhaller001" } ]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [ "matplotlib", "numpy" ]
optional-dependencies.docs = [
    "ipython",                  # Required for syntax highlighing (https://github.com/spatialaudio/nbsphinx/issues/24)
    "myst-parser",
    "nbsphinx",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-autodoc-typehints",
    "sphinx-book-theme",
]
optional-dependencies.test = [
    "coverage",
    "flit",
    "ipykernel",
    "ipython",
    "ipywidgets",
    "pre-commit",
    "pytest",
    "ruff",
    "twine",
    "ty>=0.0.16",
    "types-requests",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://harryhaller001.github.io/matplotlib-radar/"
urls.Source = "https://github.com/harryhaller001/matplotlib-radar"

[tool.flit]
sdist.include = [ "matplotlib_radar/", "tests/" ]
sdist.exclude = [
    "docs/",
    "coverage",
    ".git/",
    ".github/",
    ".pre-commit-config.yaml",
    "Makefile",
    ".python-version",
    # "requirements.txt",
    ".vscode/",
]

[tool.ruff]
line-length = 120
extend-include = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [ "B", "BLE", "C4", "D", "E", "F", "I", "RUF100", "TID", "UP", "W" ]
lint.ignore = [ "B008", "C408", "D100", "D104", "D105", "D107", "D203", "D213", "D400", "D401", "E501", "E731", "E741" ]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
column_width = 120
indent = 4
keep_full_version = false
max_supported_python = "3.14"

[tool.pytest]
# Pytest config
ini_options.minversion = "7.0"
ini_options.log_format = "%(asctime)s %(levelname)s %(message)s"
ini_options.log_date_format = "%Y-%m-%d %H:%M:%S"
ini_options.log_level = "INFO"
ini_options.log_cli = true
ini_options.python_files = "test_*.py"
ini_options.testpaths = [ "tests" ]
ini_options.xfail_strict = true
ini_options.addopts = [
    "--import-mode=importlib", # allow using test files with same name
]

[tool.coverage]
run.omit = [ "*/tests/*" ]
# Coverage config
run.source = [ "matplotlib_radar" ]
report.exclude_lines = [ "pass", "raise" ]
report.ignore_errors = true
html.directory = "coverage_report"
